well shit, i have to commit all this

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 HueVoice.v11.suo
 HueVoice/bin/
 HueVoice/obj/Debug/
+HueVoice/obj/Debug/HueVoice.csproj.GenerateResource.Cache
+HueVoice/obj/Debug/HueVoice.csproj.GenerateResource.Cache
+HueVoice/bin/Debug/HueVoice.exe
+HueVoice/bin/Debug/HueVoice.pdb
